--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -42,8 +42,8 @@ section {
 }
 
 strong {
-	font-family: 'TTNorms-Medium';
-	font-weight: 500;
+	font-family: 'TTNorms-Bold';
+	font-weight: 100;
 }
 
 a {
