--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -17,6 +17,7 @@
 							{{content}}
 						</div>
 						<div class="tag-container">
+							{{> cover-tag}}
 							{{#get "tags" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts desc" }}
 								{{#foreach tags visibility="internal"}}
 									<div class="tag-wrapper">
