--- a/src/less/apply/applyform.less
+++ b/src/less/apply/applyform.less
@@ -1,8 +1,9 @@
 @import "../global/variables.less";
 
-.page-apply {
+
+.page-become-a-contributor {
   .main-content {
-    width: 700px;
+    width: 100%;
     padding: 50px 80px;
     margin: auto;
 
@@ -89,11 +90,35 @@
       outline: 0;
       background: #f2f2f2;
       width: 100%;
-      border: 0;
+      border: 0px solid;
       margin: 0 0 15px;
       padding: 15px;
       box-sizing: border-box;
       font-size: 14px;
+      transition: all .2s ease-out;
+
+      &::placeholder {
+				color: #828294;
+				font-family: 'TTNorms-Regular',sans-serif!important;
+			}
+
+      &:focus {
+        border: 1px solid #81bad2;
+      }
+
+			&:hover {
+				background: rgba(64, 206, 199, 0.16);
+				border: 1px solid #81bad2;
+
+				&::placeholder {
+					color: #72859d;
+          opacity: .6;
+				}
+
+				&::after {
+					color: #8aafb8;
+				}
+			}
     }
 
     textarea {
@@ -238,8 +263,8 @@ button {
   color: #FFFFFF;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-      margin-top: 20px;
+  transition: all 0.3 ease-out;
+  margin-top: 20px;
 
   &:hover {
     cursor: pointer;
