new entry point for projects

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -6,7 +6,6 @@
 	<div class="container">
 		<!-- start post -->
 		{{#post}}
-
 			<div class="main-content">
 				{{#if feature_image}}
 					<div class="featured-media" style="background-image: url({{feature_image}});">
@@ -144,5 +143,5 @@
 	<!-- end main post area -->
 </section>
 
-<script src="{{asset "/js/kanban.js"}}"></script>
+<script src="{{asset "dist/projects.js"}}"></script>
 <!-- end site's main content area -->
