--- a/partials/subscribe_form.hbs
+++ b/partials/subscribe_form.hbs
@@ -3,8 +3,8 @@
     {{hidden}}
 
     <div class="form-group{{#if error}} error{{/if}}">
-        <input type="text" class="subscribe-input-class" placeholder="Name" onfocus="" value="" autofocus="autofocus">
-        {{input_email class=input_class placeholder=placeholder value=email autofocus=autofocus}}
+        <input type="text" class="subscribe-input-class" label="name" placeholder="Name" onfocus="" value="" autofocus="autofocus">
+        {{input_email class=input_class placeholder=placeholder value=email label=email autofocus=autofocus}}
         <!--<select class="country">
         	<option value="AF">Afghanistan</option>
         	<option value="AX">Åland Islands</option>
