--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -42,7 +42,7 @@
 				overflow: hidden;
 				text-overflow: ellipsis;
 				max-width: 90%;
-				display: inline-block;
+				display: inline;
 			}
 		}
 
@@ -506,7 +506,6 @@
 			display: block;
 			@media(max-width: 600px) {
 				margin-left: 0;
-				font-size: .9em;
 			}
 		}
 	}
