--- a/partials/subscribe_form.hbs
+++ b/partials/subscribe_form.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="{{action}}" class="{{form_class}}">
+<form method="post" action="https://getform.io/f/72bfedad-b346-4add-a585-2a93b63ea28f" class="{{form_class}}">
     {{! This is required for the form to work correctly }}
     {{hidden}}
 
