post style fixes

--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -419,4 +419,15 @@
       color: #12b3a3 !important;
     }
   }
+
+  .graphql{
+    color: #bc6391;
+    background: #fde1ef;
+
+    * {
+      color: #bc6391 !important;
+    }
+  }
+
+
 }
