--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -135,6 +135,7 @@
 			letter-spacing: 0;
 			font-weight: 600;
 			text-align: center;
+			font-family: 'ProductSans-Regular', 'TTNorms-Medium' !important;
 		}
 
 		a {
@@ -205,7 +206,7 @@
 			font-size: 1.3em;
 		}
 		@media(max-width: 600px) {
-			text-align: center;
+			text-align: left;
 			line-height: 1.4;
 		}
 	}
@@ -219,8 +220,9 @@
 		text-align: left;
 		font-size: 1em;
 		line-height: 1.8;
+		-webkit-font-smoothing: auto;
 		@media(max-width: 600px) {
-			font-size: 0.96em;
+			font-size: .93em !important;
 		}
 	}
 
@@ -489,7 +491,7 @@
 		margin-bottom: 30px;
 		margin-top: 20px;
 		@media(max-width:600px) {
-			margin: 15px 15px 0;
+			margin: 20px 15px 25px;
 			padding-left: 0;
 		}
 
@@ -498,7 +500,6 @@
 			font-style: normal;
 			font-variant: normal;
 			text-rendering: auto;
-			-webkit-font-smoothing: antialiased;
 			margin-bottom: 15px;
 			padding-left: 0;
 			line-height: 1.4;
@@ -660,7 +661,7 @@
 			width: -webkit-fill-available !important;
 			height: auto;
 			font-size: 14px !important;
-			margin-top: -5px;
+			margin-top: 5px;
 			margin-right: calc(-50vw + 50%)!important;
 			margin-left: calc(-58vw + 50%)!important;
 			padding: 10px 25px !important;
