fixed post mobile styles

--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -156,6 +156,11 @@
   }
 }
 
+.meta-item svg {
+  width: 17px;
+  margin-right: 5px;
+}
+
 .meta,
 .post-meta,
 .tag {
@@ -426,8 +431,7 @@
 
     * {
       color: #bc6391 !important;
+      fill: #bc6391 !important;
     }
   }
-
-
 }
