--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -105,7 +105,7 @@
       width: -webkit-fill-available;
       width: -moz-webkit-fill-available;
       padding: 8px 0;
-      font-size: 1.4em;
+      font-size: 1.2em;
       margin-bottom: 0;
       margin-left: 0;
     }
@@ -116,6 +116,10 @@
 .language-shell,
 .hljs.bash,
 .language-bash  {
+
+  .hljs-built_in {
+    color: #df91dc !important;
+  }
   &::before {
     margin-bottom: 11px;
     margin-left: -40px;
@@ -134,7 +138,7 @@
       width: -webkit-fill-available;
       width: -moz-webkit-fill-available;
       padding: 8px 0;
-      font-size: 1.4em;
+      font-size: 1.2em;
       margin: 0 auto;
     }
   }
