--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -25,19 +25,19 @@
                   <div class="split-fields">
                     <div class="input-field-group">
                       <label for="application_name">Full Name (required)</label>
-                      <input id="application_name"  label="Full Name" class="form-control" maxlength="20" name="application_submission[name]" type="text" required="">
+                      <input id="application_name"  label="Full Name" class="form-control" maxlength="20" name="fullname" type="text" required="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_email"> Email (required) </label>
-                      <input id="application_email"  placeholder="coolguy@yahoo.com" label="Email" class="form-control" maxlength="30" name="application_submission[email]" type="email" required="" onblur="">
+                      <input id="application_email"  placeholder="coolguy@yahoo.com" label="Email" class="form-control" maxlength="30" name="email" type="email" required="" onblur="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_username"> Nickname /Call Sign/ Gangsta Rap Persona </label>
-                      <input id="application_username"  label="Nickname" placeholder="Mavrick" class="form-control" maxlength="30" name="application_submission[username]" type="text" onblur="">
+                      <input id="application_username"  label="Nickname" placeholder="Mavrick" class="form-control" maxlength="30" name="nickname" type="text" onblur="">
                     </div>
                     <div class="input-field-group">
                       <label for="application__expertise"> What are your areas of expertise? (required) </label>
-                      <input id="application__expertise"  label="Experise" placeholder="Java, ASP, Perl"  class="form-control" maxlength="100" name="application_submission[expertise]" type="text" required="" onblur="">
+                      <input id="application__expertise"  label="Experise" placeholder="Java, ASP, Perl"  class="form-control" maxlength="100" name="expertise" type="text" required="" onblur="">
                     </div>
                   </div>
                 </fieldset>
@@ -49,7 +49,7 @@
                   </p>
                   <div class="input-field-group">
                     <label for="application_sample"> Writing sample (required) </label>
-                    <textarea class="form-control" label="Writing Sample" aria-describedby="application_sample" id="application_submission_sample" name="application_submission[sample]" required=""></textarea>
+                    <textarea class="form-control" label="Writing Sample" aria-describedby="application_sample" id="application_submission_sample" name="writing_sample" required=""></textarea>
                   </div>
                 </fieldset>
 
@@ -61,27 +61,27 @@
                   <div class="split-fields">
                     <div class="input-field-group">
                       <label for="application_website">Website</label>
-                      <input  class="form-control" label="Website" placeholder="http://yourwebbsite.com" id="application_website" maxlength="40" name="application_submission[website]" type="text" onblur="">
+                      <input  class="form-control" label="Website" placeholder="http://yourwebbsite.com" id="application_website" maxlength="40" name="website" type="text" onblur="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_blog">Blog</label>
-                      <input  class="form-control" label="Blog" id="application_blog" placeholder="https://medium.com/You"  maxlength="40" name="application_submission[blog]" type="text" onblur="">
+                      <input  class="form-control" label="Blog" id="application_blog" placeholder="https://medium.com/You"  maxlength="40" name="blog" type="text" onblur="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_github">Github</label>
-                      <input  class="form-control" label="Github" id="application_github" placeholder="https://github.com/nerdinator" maxlength="40" name="application_submission[github]" type="text" onblur="">
+                      <input  class="form-control" label="Github" id="application_github" placeholder="https://github.com/nerdinator" maxlength="40" name="github" type="text" onblur="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_twitter">Twitter</label>
-                      <input  class="form-control" label="Twitter" id="application_twitter" placeholder="https://twitter.com/YourHandle" maxlength="40" name="application_submission[twitter]" type="text" onblur="">
+                      <input  class="form-control" label="Twitter" id="application_twitter" placeholder="https://twitter.com/YourHandle" maxlength="40" name="twitter" type="text" onblur="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_myspace">MySpace</label>
-                      <input  class="form-control" label="Myspace" id="application_myspace" placeholder="http://www.myspace.com/emokid666" maxlength="40" name="application_submission[myspace]" type="text" onblur="">
+                      <input  class="form-control" label="Myspace" id="application_myspace" placeholder="http://www.myspace.com/emokid666" maxlength="40" name="myspace" type="text" onblur="">
                     </div>
                     <div class="input-field-group">
                       <label for="application_ssn">Social Security Number</label>
-                      <input  class="form-control" label="SSN" id="application_ssn" placeholder="000-00-0000" maxlength="12" name="application_submission[ssn]" type="text" onblur="">
+                      <input  class="form-control" label="SSN" id="application_ssn" placeholder="000-00-0000" maxlength="12" name="ssn" type="text" onblur="">
                     </div>
                   </div>
                     <button type="submit" label="submit" class="btn btn-primary">Submit</button>
@@ -95,7 +95,6 @@
   </article>
   <!-- end main post area -->
 </section>
-<!--<script src="https://www.google.com/recaptcha/api.js?render=6Lf-H40UAAAAANt5tXMeEU_NGyEuetfeAbVDhX21"></script>-->
 {{/post}}
 <!-- end post -->
 <!-- end site's main content area -->
