html colors for code snippet

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -153,7 +153,7 @@ blockquote pre {
   .language-html,
   .language-jinja,
   .language-xml {
-    background: linear-gradient(#3b3851,#24202f)!important;
+    background: linear-gradient(#3f396b, #27203a) !important;
     color: #d0e1f6;
 
     .hljs-tag {
