--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -318,11 +318,11 @@
   }
 
   .flask {
-    color: #545b6f !important;
-    background-color: #ced1d6;
+    color: #506398 !important;
+    background-color: #d3dbe8;
 
     * {
-      color: #545b6f !important;
+      color: #506398 !important;
     }
   }
 
