newsletter style, project fixes

--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -345,17 +345,17 @@
 				}
 
 				&:hover {
-					background: rgba(64, 206, 199, 0.16);
-					border-color: #82d3d0;
-					cursor: text;
+					background: rgba(64, 206, 199, 0.16) !important;
+					border-color: #82d3d0 !important;
+					cursor: text !important;
 
 					&::placeholder {
-						color: #72859d;
+						color: #72859d !important;
 					}
 				}
 
 				&:focus {
-					background: white;
+					background: white !important;
 				}
 			}
 
@@ -381,16 +381,16 @@
 
 			input[name=name] {
 				&:hover {
-					background: rgba(64, 206, 199, 0.16);
-					border-color: #82d3d0;
-					cursor: text;
+					background: rgba(64, 206, 199, 0.16) !important;
+					border-color: #82d3d0 !important;
+					cursor: text !important;
 
 					&::placeholder {
-						color: #72859d;
+						color: #72859d !important;
 					}
 
 					&::after {
-						color: #8aafb8;
+						color: #8aafb8 !important;
 					}
 				}
 
