mobile post quirks

--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -88,12 +88,12 @@
         margin-bottom: 55px;
         overflow: hidden;
         font-family: 'TTNorms-Regular';
-        font-size: 1em;
+        font-size: 1em !important;
         text-overflow: ellipsis;
         font-weight: 600;
 
         @media(max-width: 600px){
-          font-size: 9em;
+          font-size: .95em !important;
         }
       }
 
