--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -381,10 +381,10 @@
 
 			input[name=name] {
 				&::placeholder {
-					opacity: 1;
+					opacity: .8;
 					color: #828294;
 				}
-				
+
 				&:hover {
 					background: rgba(64, 206, 199, 0.16) !important;
 					border-color: #82d3d0 !important;
