--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -78,6 +78,8 @@
 			}
 			@media(max-width: 600px) {
 				margin-bottom: 20px;
+				max-width: 100%;
+				overflow: hidden;
 			}
 		}
 
@@ -222,7 +224,7 @@
 		line-height: 1.8;
 		-webkit-font-smoothing: auto;
 		@media(max-width: 600px) {
-			font-size: .93em !important;
+			font-size: .98em !important;
 		}
 	}
 
@@ -298,6 +300,7 @@
 			text-align: left;
 			line-height: 1.65 !important;
 			font-style: normal;
+			font-size: .98em !important;
 		}
 	}
 }
