mobile post quirks

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -908,4 +908,17 @@
 		background: linear-gradient(0deg, #0e2542, rgba(11, 33, 58, 0));
 		mix-blend-mode: hard-light;
 	}
+
+	.lightboxOverlay {
+		position: fixed !important;
+	}
+
+	.lightbox {
+		top: 30%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    position: fixed;
+	}
 }
