mobile post quirks

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -914,10 +914,10 @@
 	}
 
 	.lightbox {
-		top: 30%;
-    left: 0;
-    bottom: 0;
-    right: 0;
+		top: 30% !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    right: 0 !important;
     margin: auto;
     position: fixed;
 	}
