minor bloat trimming

--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -14,7 +14,6 @@
 		</div>
 		</div>
 	{{/if}}
-
 {{! Regular tag page}}
 	{{else}}
 		<div class="cover">
@@ -32,3 +31,4 @@
 		</div>
 		{{/if}}
 {{/tag}}
+{{! End tag widget}}
