--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -1,43 +1,47 @@
 {{#author}}
-<div class="cover author-cover">
-	<div class="avatar-wrap">
-		{{#if profile_image}}
-			<img src="{{profile_image}}" alt="{{name}} avatar" class="avatar">
+	<div class="cover author-cover">
+		<div class="avatar-wrap">
+			{{#if profile_image}}
+				<img src="{{profile_image}}" alt="{{name}} avatar" class="avatar">
 			{{else}}
-			<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{asset "images/default-user-image.jpg"}}" alt="{{name}} avatar" class="avatar">
-		{{/if}}
-	</div>
-	<h3 class="author-name">
-		{{name}}
-	</h3>
-	<div class="meta-info">
+				<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{asset "images/default-user-image.jpg"}}" alt="{{name}}'s avatar" class="avatar">
+			{{/if}}
+		</div>
+		<h3 class="author-name">
+			{{name}}
+		</h3>
+		<div class="meta-info">
 			<span class="post-count"><i class="fal fa-pencil"></i>{{plural posts.total empty='No posts' singular='% post' plural='% posts'}}</span>
-		{{#if location}}
-		<span class="loaction"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
-		{{/if}}
-		{{#if website}}
-		<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
-		{{/if}}
-		{{#if twitter}}
-		<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
-		{{/if}}
-		{{#if facebook}}
-		<span class="facebook"><a href="{{facebook_url}}"><i class="fa fa-facebook"></i></a></span>
+			{{#if location}}
+				<span class="loaction"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
+			{{/if}}
+			{{#if website}}
+				<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
+			{{/if}}
+			{{#if twitter}}
+				<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
+			{{/if}}
+			{{#if facebook}}
+				<span class="facebook"><a href="{{facebook_url}}"><i class="fa fa-facebook"></i></a></span>
+			{{/if}}
+		</div>
+		{{#if bio}}
+			<div class="bio">{{{bio}}}</div>
 		{{/if}}
 	</div>
-	{{#if bio}}
-	<div class="bio">{{{bio}}}</div>
-	{{/if}}
-</div>
 
-<script>
-$(document).ready(function(){
-	$.get(
-		ghost.url.api('posts', {limit: 'all', include: 'count.posts', filter: 'author:{{slug}}'})).done(function( data ) {
-	    console.log( "Data Loaded: " + data );
-			$('.post-count').append(data.posts.length);
-			$('.post-count').append(' Posts');
+	<script>
+		$(document).ready(function() {
+			$.get(
+				ghost.url.api('posts', {
+					limit: 'all',
+					include: 'count.posts',
+					filter: 'author:{{slug}}'
+				})).done(function(data) {
+				console.log("Data Loaded: " + data);
+				$('.post-count').append(data.posts.length);
+				$('.post-count').append(' Posts');
+			});
 		});
-});
-</script>
+	</script>
 {{/author}}
