--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -538,9 +538,9 @@
 			color: #455f6f;
 			line-height: 1.3;
 			letter-spacing: 0;
-			font-size: 16px;
+			font-size: 15px;
 			margin: 0;
-			font-family: 'TTNorms-Medium',sans-serif;
+			font-family: 'TTNorms-Regular',sans-serif;
 			display: flex;
 			align-items: center;
 
@@ -789,7 +789,7 @@
 
 			.date {
 				color: #8091ab;
-				font-size: 14px;
+				font-size: 13px;
 				opacity: 1;
 				margin-top: 5px;
 				font-family: 'TTNorms-Regular', sans-serif;
