--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -2,6 +2,7 @@
 @import 'global/variables.less';
 
 /* Post Styles */
+@import 'posts/about-author.less';
 @import 'posts/code.less';
 @import 'posts/postheader.less';
 @import 'posts/post.less';
