--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -23,7 +23,7 @@
     font-size: 1.4em;
   }
 }
-
+/*
 .page-projects {
   .sidebar {
     display: none;
@@ -129,7 +129,7 @@
     }
   }
 
-  .kanbancontainer {
+  .swiper-container {
     margin-bottom: 20px;
     width: 99.5%;
     display: block;
@@ -137,12 +137,6 @@
     @media(max-width: 800px) {
       margin-bottom: 0;
     }
-  }
-
-  .kanban {
-    display: flex;
-    justify-content: space-between;
-    background: none;
 
     .column {
       background: #fff;
@@ -226,7 +220,6 @@
       @media(max-width: 800px) {
         min-width: auto;
         margin-bottom: 0;
-        /*max-width: 90%;*/
       }
       @media(max-width:600px) {
         margin: 0 5% 50px!important;
@@ -237,21 +230,11 @@
         margin-top: 0;
         font-size: 1.38em;
         margin: 20px auto;
-        /*border-bottom: 1px solid fade(@theme-color, 40%);*/
         padding-bottom: 0;
         position: relative;
         width: 89%;
         font-weight: 100;
         font-family: 'TTNorms-Medium',TTNorms-Medium;
-        /*  &::after {
-          content: "";
-          width: 90px;
-          height: 1px;
-          background: #26a2c7;
-          position: absolute;
-          left: 0;
-          bottom: -1px;
-        }*/
       }
 
       .cards {
@@ -355,7 +338,7 @@
               .priority {
                 width: 25px;
                 height: 25px;
-                border-radius: 50%;
+                border-radius: 2px;
                 overflow: hidden;
                 margin: 0;
                 text-align: center;
@@ -397,13 +380,6 @@
               text-align: center;
 
               i {
-                margin-right: 5px;
-              }
-
-              span {
-                color: #343434;
-                font-size: 12px;
-                font-family: 'TTNorms-Medium';
                 margin-right: 5px;
               }
 
@@ -499,3 +475,4 @@
     }
   }
 }
+*/
