--- a/partials/about-author.hbs
+++ b/partials/about-author.hbs
@@ -8,25 +8,29 @@
 		{{/if}}
 		<div class="details">
 			<div class="author">
-				<a href="{{url}}">{{name}}</a>
+				<a href="{{url}}" class="name">{{name}}</a>
 			</div>
-			<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</a></span>
-			{{#if location}}
-				<span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
-			{{/if}}
-			{{#if website}}
-				<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i>{{t "Website"}}</a></span>
-			{{else}}
-				<span class="website"><a href="https://hackersandslackers.com/author/{{slug}}" targer="_BLANK"><i class="fal fa-globe"></i>{{t "Website"}}</a></span>
-			{{/if}}
-			{{#if twitter}}
-				<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i>{{twitter}}</a></span>
-			{{/if}}
-			{{#if facebook}}
-				<span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i></a></span>
-			{{/if}}
+			<div class="authormeta">
+				<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</a></span>
+				{{#if location}}
+					<span class="location"><i class="fal fa-home"></i><span class="copy">{{location}}</span></span>
+				{{/if}}
+				{{#if website}}
+					<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
+				{{else}}
+					<span class="website"><a href="https://hackersandslackers.com/author/{{slug}}" targer="_BLANK"><i class="fal fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
+				{{/if}}
+				{{#if twitter}}
+					<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i><span class="copy">{{twitter}}</a></span></span>
+				{{/if}}
+				{{#if facebook}}
+					<span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i></a></span>
+				{{/if}}
+			</div>
 			{{#if bio}}
-				<div class="bio">{{{bio}}}</div>
+				<div class="bio">
+					{{{bio}}}
+				</div>
 			{{/if}}
 		</div>
 
