--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -88,7 +88,7 @@
 .hljs.output,
 .language-output {
   &::before {
-    margin-bottom: 11px;
+    margin-bottom: 0;
     margin-left: -40px;
     width: 110%;
     height: auto;
@@ -121,7 +121,7 @@
     color: #df91dc !important;
   }
   &::before {
-    margin-bottom: 11px;
+    margin-bottom: 0;
     margin-left: -40px;
     width: 110%;
     height: auto;
