--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -15,6 +15,64 @@
   }
 }
 
+/* Start Lynx Blurb */
+.post-roundup-blurb {
+  padding: 10px 40px;
+  background: 0 0;
+  border-top: 0;
+  margin: 30px 60px 60px;
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 50px;
+  border-bottom: 0;
+  border-left: 5px solid #c8dec8;
+  background: #ecf1ec;
+  border-radius: 5px;
+  @media(max-width: 800px) {
+    margin: 30px 35px 60px;
+  }
+  @media(max-width: 600px) {
+    padding: 15px 20px;
+    margin: 25px 30px 30px;
+    width: auto;
+  }
+
+  p {
+    margin: 0 !important;
+    color: #9dc29f;
+    line-height: 1.4 !important;
+    text-align: left;
+  }
+
+  i {
+    font-size: 37px;
+    margin-right: 25px;
+    color: #9dc29f;
+  }
+
+  .blurb-icon {
+    background: url("http://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/flask-icon.png");
+    height: 55px;
+    width: 55px;
+    min-width: 55px;
+    margin-right: 25px;
+    background-size: cover;
+    display: inline-block;
+    @media(max-width: 800px) {
+      margin-right: 15px;
+    }
+    @media(max-width: 600px) {
+      height: 65px;
+      min-width: 65px;
+      display: none;
+    }
+  }
+}
+/* End Lynx Blurb */
+
+
 .link-preview {
   padding: 30px 15px 15px;
   transition: all 0.2s ease-out;
