restyled sidebar widgets

--- a/partials/subscribe_form.hbs
+++ b/partials/subscribe_form.hbs
@@ -3,7 +3,7 @@
     {{hidden}}
 
     <div class="form-group{{#if error}} error{{/if}}">
-        <input type="text" class="subscribe-input-class" label="name" placeholder="Name" onfocus="" value="name" autofocus="autofocus">
+        <input type="text" class="subscribe-input-class" label="name" placeholder="Name" onfocus="" autofocus="autofocus">
         {{input_email class=input_class placeholder=placeholder value=email label=email autofocus=autofocus}}
         <!--<select class="country">
         	<option value="AF">Afghanistan</option>
