--- a/partials/widget-search.hbs
+++ b/partials/widget-search.hbs
@@ -1,5 +1,6 @@
 <!-- start search widget -->
 <div class="widget search">
+	<h3 class="sidebar-title">Search</h3>
 		<div class="form-group">
     	<input id="my-custom-input" placeholder="Search all posts">
 		</div>
