--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -4,7 +4,7 @@
 	footer
 ====================================================*/
 .main-footer {
-	background: #111c28 !important;
+	background: #141b22 !important;
 	background-size: cover;
 	padding: 35px 8%;
 	color: #fff;
