--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -3,6 +3,7 @@ section > .container {
 	max-width: 1200px;
 	margin: auto;
 	display:flex;
+	justify-content: space-between;
 	@media(max-width: 1200px) {
 		width: 95%;
 		max-width: none;
@@ -19,7 +20,7 @@ section > .container {
 }
 
 .sidebar {
-	width: 32%;
+	width: 34%;
 	@media (max-width:800px) {
 		display: none;
 	}
