--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -2,7 +2,7 @@
 @import "mixin.less";
 
 .post-preview {
-	padding: 0 !important;
+	padding: 25px !important;
 	box-shadow: @shadow-color;
 	margin-bottom: 40px;
 	background: white;
@@ -52,7 +52,7 @@
 			font-size: 1em;
 			font-weight: 500;
 			color: #2d2f35;
-			margin-bottom: 25px;
+			margin-bottom: 15px;
 			@media(max-width: 600px) {
 				font-size: 0.9em;
 				line-height: 1.6em;
@@ -75,11 +75,12 @@
 		max-height: 380px;
 		height: 48vw;
 		display: block;
-		margin: auto;
+		margin: 0 auto 20px;
 		background-size: cover !important;
 		background-position-y: center;
-		box-shadow: 0 0 8px rgba(93, 97, 140, .35);
+		/*box-shadow: 0 0 8px rgba(93, 97, 140, .35);*/
 		transition: all 0.2s ease-out;
+
 		@media(max-width: 1000px) {
 			max-height: 35vw !important
 		}
@@ -396,22 +397,20 @@
 }
 
 .content {
-	padding: 20px 30px;
-	@media(max-width: 600px) {
-		padding: 15px 20px 20px;
-	}
+	padding: 0 5px;
 }
 
 .post-permalink {
 	text-align: left;
 	display: flex;
 	justify-content: space-between;
-	padding: 10px 0;
+	padding: 15px 0 0;
 	align-items: center;
-	@media(max-width: 600px) {
+	border-top: 1px solid #e7e7e7;
+	/*@media(max-width: 600px) {
 		padding: 0 0 3px;
 		margin-top: 15px;
-	}
+	}*/
 
 	.btn {
 		height: 17px;
