kanban works flawlessly

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
-<script src="{{asset "js/includes/swiper.min.js"}}"></script>
+<script src="{{asset "js/slick.min.js"}}"></script>
 <section class="content-wrap archive">
 	{{> postheader}}
 	<div class="container">
