--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -1,6 +1,6 @@
 <!-- start kanban widget -->
-<div class="swiper-container">
-  <div class="swiper-wrapper">
+<div>
+  <div id="kanban">
     <div class="column swiper-slide b">
       <div id="backlog">
         <div class="column-head">
