--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -419,7 +419,7 @@
 		border-bottom: 2px solid #009c83;
 		background: linear-gradient(135deg,#4fc388,#21b6b7);
 		color: white;
-		font-family: 'ProductSans-Medium',sans-serif;
+		font-family: 'ProductSans-Regular',sans-serif;
 		font-size: 18px;
 		font-weight: 600;
 		line-height: 1;
