post preview mobile view

--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -4,7 +4,7 @@
 
 
 .postlist {
-  
+
   @media(max-width: 1000px) {
     padding: 0 0 0 10px;
   }
@@ -12,6 +12,10 @@
     padding: 0;
     margin: 0 6%;
     width: 88%;
+  }
+  @media(max-width: 600px) {
+    margin: 0 auto;
+    width: 93%;
   }
 
   &:last-child {
