--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -638,7 +638,7 @@
 		line-height: 1.4;
 		font-size: 15px;
 		margin: 0;
-		font-family: 'TTNorms-Medium', sans-serif;
+		font-family: 'TTNorms-Regular', sans-serif;
 		display: inline-block;
 
 		&:hover {
